improve webview; remove various deps